--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -20,10 +20,10 @@ a {
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
+  border-color: black;
   border-style: solid;
   border-width: 1px;
-  border-radius: 0.3rem;
+  border-radius: 0px;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
   .btn + .btn {
     margin-left: 1rem; }
@@ -73,7 +73,9 @@ a {
 
 .project-name {
   margin-top: 0;
-  margin-bottom: 0.1rem; }
+  margin-bottom: 0.1rem;
+  font-size=200%
+}
 
 @media screen and (min-width: 64em) {
   .project-name {
