--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Libre Baskerville', serif;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
@@ -74,7 +74,8 @@ a {
 .project-name {
   margin-top: 0;
   margin-bottom: 0.1rem;
-  font-size=200%
+  font-size: 300%;
+  color: black;
 }
 
 @media screen and (min-width: 64em) {
