--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Libre Baskerville', serif;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.5;
   color: #606c71; }
 
@@ -74,7 +74,7 @@ a {
 .project-name {
   margin-top: 0;
   margin-bottom: 0.1rem;
-  font-size: 100px;
+  font-size: 400%;
   color: black;
 }
 
