--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,8 +5,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Libre Baskerville', serif;
-  /* font-size: 16px; */
-  line-height: 1.5;
+  /* font-size: 16px; 
+  line-height: 1.5;*/
   color: #606c71; }
 
 a {
