--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -80,7 +80,7 @@ a {
 
 @media screen and (min-width: 64em) {
   .project-name {
-    font-size: 6.25rem; } }
+    font-size: 100px; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-name {
