--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -41,17 +41,17 @@ a {
   color: black;
 }
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 981px) {
   .project-name {
     font-size: 100px; } }
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
+@media screen and (min-width: 768px) and (max-width: 980px) {
   .project-name {
-    font-size: 2.25rem; } }
+    font-size: 85px; } }
 
-@media screen and (max-width: 42em) {
+@media screen and (max-width: 767px) {
   .project-name {
-    font-size: 1.75rem; } }
+    font-size: 60px; } }
 
 .project-tagline {
   margin-bottom: 2rem;
@@ -73,6 +73,7 @@ a {
 .social {
     margin: 20;
     padding: 10;
+    float: right;
 }
 
 .social i {
