--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -38,6 +38,7 @@ a {
   margin-top: 0;
   margin-bottom: 0.1rem;
   font-size: 400%;
+  text-align: center;
   color: black;
 }
 
@@ -60,15 +61,15 @@ a {
 
 @media screen and (min-width: 64em) {
   .project-tagline {
-    font-size: 1.25rem; } }
+    font-size: 20px; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-tagline {
-    font-size: 1.15rem; } }
+    font-size: 12px; } }
 
 @media screen and (max-width: 42em) {
   .project-tagline {
-    font-size: 1rem; } }
+    font-size: 7px; } }
 
 .social {
     margin: 20;
