--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,17 +22,17 @@ a {
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 981px) {
   .page-header {
-    padding: 60px; } }
+    padding: 30px; } }
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
+@media screen and (min-width: 768px) and (max-width: 981px) {
   .page-header {
-    padding: 50px; } }
+    padding: 20px; } }
 
-@media screen and (max-width: 42em) {
+@media screen and (max-width: 767px) {
   .page-header {
-    padding: 40px; } }
+    padding: 10px; } }
 
 .project-name {
   text-align: center;
