--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -41,15 +41,18 @@ a {
 
 @media screen and (min-width: 981px) {
   .project-name {
-    font-size: 100px; } }
+    font-size: 100px;
+    padding-top: 45px; } }
 
 @media screen and (min-width: 768px) and (max-width: 980px) {
   .project-name {
-    font-size: 75px; } }
+    font-size: 75px; 
+    padding-top: 45px;} }
 
 @media screen and (max-width: 767px) {
   .project-name {
-    font-size: 40px; } }
+    font-size: 40px;
+    padding-top: 45px;} }
 
 .project-tagline {
   margin-bottom: 2rem;
