--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -48,8 +48,12 @@ a {
   .project-name {
     font-size: 75px; 
     padding-top: 45px;} }
+@media screen and (min-width: 500px) and (max-width: 767px) {
+  .project-name {
+    font-size: 60px; 
+    padding-top: 45px;} }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 499px) {
   .project-name {
     font-size: 40px;
     padding-top: 45px;} }
@@ -59,17 +63,21 @@ a {
   font-weight: normal;
   opacity: 0.7; }
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 981px) {
   .project-tagline {
     font-size: 20px; } }
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
+@media screen and (min-width: 768px) and (max-width: 980px) {
+  .project-tagline {
+    font-size: 15px; } }
+
+@media screen and (min-width: 500px) and (max-width: 767px) {
   .project-tagline {
     font-size: 12px; } }
 
-@media screen and (max-width: 42em) {
+@media screen and (max-width: 499px) {
   .project-tagline {
-    font-size: 7px; } }
+    font-size: 8px; } }
 
 .social {
     margin: 20;
