--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -24,15 +24,19 @@ a {
 
 @media screen and (min-width: 981px) {
   .page-header {
-    padding: 30px; } }
+    padding: 10px; } }
 
 @media screen and (min-width: 768px) and (max-width: 981px) {
   .page-header {
-    padding: 20px; } }
+    padding: 10px; } }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 500px) and (max-width: 767px) {
   .page-header {
-    padding: 0px; } }
+    padding: 10px; } }
+
+@media screen and (max-width: 499px) {
+  .page-header {
+    padding: 10px; } }
 
 .project-name {
   text-align: center;
