--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -96,7 +96,8 @@ a {
     background-color: #909AA0;
     font-size: 20px;
     text-align:center;
-    padding: 20px;
+    margin: 10px;
+    padding: 10px;
     border-radius: 5%;
     -moz-border-radius: 5%;
     -webkit-border-radius: 5%;
